# audio-clipping-poc

./: RREADME.md  pyproject.toml  requirements.txt
config/stations/: CKNW.yaml
examples/: station_config.sample.yaml
src/codex_audio/: pipeline.py
src/codex_audio/boundary/: candidates.py
src/codex_audio/segmentation/: refinement.py
src/codex_audio/text_features/: __init__.py  topic_segments.py
src/codex_audio/transcription/: __init__.py
tests/: test_text_features_topic_segments.py
